force-app/main/default/objects/Report_User_Facility__c/Report_User_Facility__c.object-meta.xml
<CustomObject>
    <label>Report User Facility</label>
    <nameField>
        <label>Report User Facility Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Report User Facilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>