force-app/main/default/objects/Report_User_Facility__c/fields/Facility__c.field-meta.xml
<CustomField>
    <fullName>Facility__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Facility</label>
    <referenceTo>Facility__c</referenceTo>
    <relationshipLabel>Report User Facilities</relationshipLabel>
    <relationshipName>Report_User_Facilities</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>