force-app/main/default/objects/Report_User_Facility__c/fields/Report_User__c.field-meta.xml
<CustomField>
    <fullName>Report_User__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Report User</label>
    <referenceTo>Report_User__c</referenceTo>
    <relationshipLabel>Report User Facilities</relationshipLabel>
    <relationshipName>Report_User_Facilities</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>