force-app/main/default/objects/Report_User_Facility__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Facility__c</columns>
    <columns>Report_User__c</columns>
    <columns>Account_Id__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>